[tool.poetry]
name = "oop-hw"
version = "0.1.0"
description = ""
authors = ["Savelev Maxim <vismanmark@yandex.ru>"]
readme = "README.md"

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
check_untyped_defs = true
exclude = 'venv|tests'

[tool.black]
line-length = 119
exclude = '''
/(
    \.git
  | \.venv
  | \.mypy_cache
  | \.pytest_cache
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
line_length = 119
multi_line_output = 3

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[tool.poetry.group.lint.dependencies]
mypy = "^1.15.0"
flake8 = "^7.1.1"
black = "^25.1.0"
isort = "^6.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
